aggiunta elimina_magazzinoà

--- a/src/app/Magazzino/elimina-magazzino/elimina-magazzino.component.html
+++ b/src/app/Magazzino/elimina-magazzino/elimina-magazzino.component.html
@@ -1,5 +1,5 @@
 <div>
-    <p>Sei sicuro di voler eliminare il magazzino "{{ nomeMagazzino }}"?</p>
-    <button (click)="confermaEliminazione()">Conferma</button>
+    <p>Sei sicuro di voler eliminare il magazzino "{{ nomeOriginale }}"?</p>
+    <button (click)=" eliminaMagazzino()">Conferma</button>
     <button (click)="annullaEliminazione()">Annulla</button>
 </div>
