--- a/src/app/Magazzino/modifica-magazzino/modifica-magazzino.component.html
+++ b/src/app/Magazzino/modifica-magazzino/modifica-magazzino.component.html
@@ -19,8 +19,8 @@
     </div>
 
     <div class="button-group">
-      <button type="button" class="btn btn-primary" (click)="salvaModifiche()">Salva Modifiche</button>
-      <button type="button" class="btn btn-secondary" (click)="annulla()">Annulla</button>
+      <button type="button" class="btn salva" (click)="salvaModifiche()">Salva Modifiche</button>
+      <button type="button" class="btn annulla" (click)="annulla()">Annulla</button>
     </div>
   </form>
 </div>
