--- a/src/app/Magazzino/aggiungi-magazzino/aggiungi-magazzino.component.html
+++ b/src/app/Magazzino/aggiungi-magazzino/aggiungi-magazzino.component.html
@@ -1,6 +1,8 @@
 <div>
   <h2>Aggiungi Magazzino</h2>
-  <form (submit)="aggiungiMagazzino()">
+
+  <!-- Mostra il form solo se successMessage non è definito -->
+  <form *ngIf="!successMessage" (submit)="aggiungiMagazzino()">
     <div class="form-group">
       <label for="nome">Nome:</label>
       <input type="text" id="nome" name="nome" [(ngModel)]="magazzino.nome" required>
@@ -24,9 +26,11 @@
     <button type="submit">Aggiungi Magazzino</button>
   </form>
 
-  <!-- Messaggio di successo -->
-  <div *ngIf="successMessage" class="success-message">
+  <!-- Mostra i pulsanti solo se successMessage è definito e aggiungiNuovoMagazzino è true -->
+  <div *ngIf="successMessage && aggiungiNuovoMagazzino" class="success-message">
     {{ successMessage }}
+    <button (click)="aggiungiAltroMagazzino()">Aggiungi un altro Magazzino</button>
+    <button (click)="tornaAListaMagazzini()">Torna alla lista di Magazzini</button>
   </div>
 
   <!-- Messaggio di errore -->
