--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,1 +1,6 @@
 @import '~primeicons/primeicons.css';
+.custom-toast {
+    background-color: #ffffff;
+    color: rgb(5, 82, 15);
+    font-weight: bold;
+  }
