--- a/src/app/home/menu/menu.component.html
+++ b/src/app/home/menu/menu.component.html
@@ -1,7 +1,4 @@
-
 <div class="topbar">
-
-
   <div class="logo">
     <img src="https://th.bing.com/th/id/OIP.iItjx2XLoFx1Rwgt0ug0yQHaFw?pid=ImgDet&rs=1" alt="Logo" />
   </div>
@@ -14,7 +11,7 @@
       </a>
     </li>
     <li>
-      <a routerLink="/fornitori" routerLinkActive="active">
+      <a routerLink="" routerLinkActive="active">
         <i class="pi pi-fw pi-truck"></i>
         <span>Gestione Fornitori</span>
       </a>
@@ -25,11 +22,16 @@
             <span>Aggiungi Fornitore</span>
           </a>
         </li>
+        <li>
+          <a routerLink="/fornitori" routerLinkActive="active">
+            <i class="pi pi-fw pi-list"></i>
+            <span>Elenco Fornitori</span>
+          </a>
+        </li>
       </ul>
     </li>
-    <!-- Altre voci principali del menu con sottomenu -->
     <li>
-      <a routerLink="/magazzini" routerLinkActive="active">
+      <a routerLink="" routerLinkActive="active">
         <i class="pi pi-fw pi-building"></i>
         <span>Gestione Magazzini</span>
       </a>
@@ -40,13 +42,27 @@
             <span>Aggiungi Magazzino</span>
           </a>
         </li>
+        <li>
+          <a routerLink="/magazzini" routerLinkActive="active">
+            <i class="pi pi-fw pi-list"></i>
+            <span>Elenco Magazzini</span>
+          </a>
+        </li>
       </ul>
     </li>
     <li>
-      <a routerLink="/clienti" routerLinkActive="active">
+      <a routerLink="" routerLinkActive="active">
         <i class="pi pi-fw pi-user"></i>
         <span>Gestione Clienti</span>
       </a>
+      <ul class="submenu">
+        <li>
+          <a routerLink="/clienti" routerLinkActive="active">
+            <i class="pi pi-fw pi-list"></i>
+            <span>Elenco Clienti</span>
+          </a>
+        </li>
+      </ul>
     </li>
     <li>
       <a routerLink="/ordine-cliente" routerLinkActive="active">
@@ -61,13 +77,12 @@
           </a>
         </li>
       </ul>
-     
+    </li>
     <li>
       <a routerLink="/ordine-fornitore" routerLinkActive="active">
         <i class="pi pi-fw pi-truck"></i>
         <span>Ordini Fornitore</span>
       </a>
-
       <ul class="submenu">
         <li>
           <a routerLink="/aggiungi-ordine-fornitore" routerLinkActive="active">
@@ -78,7 +93,7 @@
       </ul>
     </li>
     <li>
-      <a routerLink="/prodotti" routerLinkActive="active">
+      <a routerLink="" routerLinkActive="active">
         <i class="pi pi-fw pi-shopping-cart"></i>
         <span>Gestione Prodotti</span>
       </a>
@@ -89,18 +104,21 @@
             <span>Aggiungi Prodotto</span>
           </a>
         </li>
+        <li>
+          <a routerLink="/prodotti" routerLinkActive="active">
+            <i class="pi pi-fw pi-plus"></i>
+            <span>Elenco Prodotti</span>
+          </a>
+        </li>
       </ul>
     </li>
-
-    <ul>
-      <li class="search">
-        <input type="text" pInputText placeholder="search" (input)="ricercaFornitori()" [(ngModel)]="searchTerm" />
-        <ul *ngIf="searchTerm && searchResults.length > 0" class="search-results">
-          <li *ngFor="let result of searchResults">
-            {{ result.nome }}
-          </li>
-        </ul>
-      </li>
-    </ul>
+    <li class="search">
+      <input type="text" pInputText placeholder="search" (input)="ricercaFornitori()" [(ngModel)]="searchTerm" />
+      <ul *ngIf="searchTerm && searchResults.length > 0" class="search-results">
+        <li *ngFor="let result of searchResults">
+          {{ result.nome }}
+        </li>
+      </ul>
+    </li>
   </ul>
 </div>
